service-mesh/example-1/ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: example-1
  labels:
    monitoring: prometheus
    istio-injection: enabled
