service-mesh/example-1/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: first-app
  namespace: staging
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: first-app
