service-mesh/example-1/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: first-app
  namespace: staging
spec:
  hosts:
    - first-app
  http:
    - route:
        - destination:
            host: first-app
            subset: v1
          weight: 0
        - destination:
            host: first-app
            subset: v2
          weight: 100
#defines the virtual service for the first-app service.
# The virtual service specifies the routing rules for the service.
# The virtual service routes traffic to the subsets of the service based on the weights specified in the route section.
# The route section specifies the destination for the traffic, which is the service and the subset of the service.
# The weight specifies the percentage of traffic that is routed to the destination.
# In this example, 100% of the traffic is routed to the v2 subset of the first-app service.
